2007-06-25  Dustin J. Mitchell <dustin@zmanda.com>
	* server-src/cmdline.c server-src/cmdline.h server-src/taperscan.c
	  server-src/taperscan.h config/docbook-dtd.m4i
	  config/docbook-xslt-min.m4i config/docbook-xslt.m4i
	  config/xsltproc.m4i common-src/sockaddr-util.c
	  common-src/sockaddr-util.h common-src/amaespipe.sh.in:
	  restrict to GPLv2

2007-06-20  Dustin J. Mitchell <dustin@zmanda.com>
	* server-src/planner.c common-src/bsdudp-security.c
	  common-src/krb5-security.c common-src/bsd-security.c:
	  remove dead/unused code

2007-06-20  Dustin J. Mitchell <dustin@zmanda.com>
	* client-src/sendsize.c: call dbfn(), not debug_fn()
	* common-src/amanda.h: make dbfn() return a meaningful string
	  when debugging is disabled

2007-06-19  Dustin J. Mitchell <dustin@zmanda.com>
	* tape-src/tapetype.c: close and re-open tape after rewind
	  (patch from Franz Fischer <amanda@franz-fischer.de>, modified
	  by Jean-Louis Martineau <martineau@zmanda.com>)

2007-06-06  Jean-Louis Martineau <martineau@zmanda.com>
        * restore-src/restore.c: accept all header with size >= DISK_BLOCK_BYTES

2007-06-18  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amstatus.pl.in: Set and use chunk_time.

2007-06-07  Dustin J. Mitchell <dustin@zmanda.com>
	* server-src/amcleanupdisk.c: don't try to clean up holding disks
	  if they are empty.

2007-06-06  Dustin J. Mitchell <dustin@zmanda.com>
	* client-src/sendbackup.c: remove bogus check for unknown program

2007-06-07  Jean-Louis Martineau <martineau@zmanda.com>
	Christopher McCrory found the cause of the problem.
	* server-src/find.c: Send ouput to stderr.

2007-06-07  Jean-Louis Martineau <martineau@zmanda.com>
	* configure.in: detect GNU tar's 'backup' and ignore it.  Thanks
	  to Jeanna Geier <jeanna@webteam.net> for spotting this.

2007-06-05  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/util.c: Don't use -w flags for od execution.

2007-06-05  Dustin J. Mitchell <dustin@zmanda.com>